phase2_Dev/src/objects/HistoryOfNonCompliance__c.object
<CustomObject>
    <fields>
        <fullName>Citation__c</fullName>
        <label>Citation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionDate__c</fullName>
        <label>InteractionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>HistoryOfNonCompliance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProgramID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HistoryOfNonCompliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>